[package]
name = "android_trace"
description = "Support for Android NDK Tracing"
categories = ["api-bindings", "os"]
keywords = ["android", "logging", "atrace", "ndk"]
readme = true

version = "0.1.2"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"
repository = "https://github.com/linebender/android_trace"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
# In theory, we could add the other Android targets here.
# However, the API is identical across all of them, so there's no advantage.
default-target = "aarch64-linux-android"
targets = []

#[lints]
#workspace = true

[dependencies]
libc = "0.2.153"
android_trace_sys = { path = "/ssd4/display-safety-green/crates/framework/android_trace_sys" }

[features]
default = ["api_level_23"]
# Assume that Android API level 23 is available, to avoid some runtime symbol lookups
api_level_23 = []
# Assume that Android API level 29 is available, to avoid runtime symbol lookups entirely
api_level_29 = ["api_level_23"]

[dev-dependencies]
static_assertions = "1.1.0"
